1998-04-27  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* classify.c (Classify_File): Add comments about checking whether
	command name is "update".

1998-04-22  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version number to 1.9.27.1.

	* Version 1.9.27.

1998-04-20  Jim Kingdon  <kingdon@harvey.cyclic.com>

	(This diff was run by devel-cvs and everyone seemed to like it).
	* diff.c (diff_file_nodiff): Make HEAD mean the head of the branch
	which contains the sticky tag, not the sticky tag itself.
	* rcs.c, rcs.h (RCS_branch_head): New function.
	* sanity.sh (head): Update for this changed behavior.

1998-04-19  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Move emptydir tests from basicb to new test emptydir.
	This is because we now need a module definition to create Emptydir;
	"co -d" doesn't cut it anymore.

1998-04-17  Petri Virkkula

	* server.c (mkdir_p): Ignore EROFS error (like for EACCES).

1998-04-16  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* checkout.c (checkout_proc): Don't create directories above the
	last one specified in "co -d".
	(build_dirs_and_chdir): Revert Noel's change of 17 Feb 1998.
	(struct dir_to_build): New field just_chdir.
	(build_dirs_and_chdir): Test it.
	* sanity.sh (abspath): New tests abspath-7* test for a bug which
	we fix, in which CVS would create bogus "D/////" entries in
	CVS/Entries.
	(abspath): Revise abspath-3* tests to test for the fact that we no
	longer create directories above the last one specified in "co -d".
	I checked that CVS 1.9 gives an error on this, so changing this
	behavior back should be OK.
	(cvsadm-2d3): Likewise (also checked CVS 1.9 for this case).
	(cvsadm-2d3d): Likewise (also checked CVS 1.9 for this case).
	(cvsadm-2d{4,5,6,7,8}, cvsadm-N2d{3,4,5,6,7,8}): Adjust for new
	behavior (same case as cvsadm-2d3).
	(cvsadm-2d{4,5,6,7,8}d, cvsadm-N2d{3,4,5,6,7,8}d): Remove test
	(same case as cvsadm-2d3d).
	(cvsadm): For remote, skip most these tests.